--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -132,8 +132,8 @@ jobs:
             "[dev,prometheus]:prometheus_tools.py",
           ]'
           # Strip trailing comma before closing ]
-          TEST_INFO_JSON=$(echo "$TEST_INFO_JSON_RAW" | sed ':a;N;$!ba;s/,\s*\]/\]/')
-          echo $TEST_INFO_JSON
+          TEST_INFO_JSON=$(echo "$TEST_INFO_JSON" | sed ':a;N;$!ba;s/,\s*\]/\]/')
+          echo $TEST_INFO
 
           # Assemble ignore args by extracting the filename part
           IGNORE_ARGS=""
