--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -126,10 +126,10 @@ jobs:
           set -euo pipefail
           echo "now: $(date -u +"%Y-%m-%dT%H:%M:%S.%3N")"
 
-          # Define test info directly as a JSON list of "[extras]:file" strings
+          # Define test info directly as a JSON list of "file:[extras]" strings
           TEST_INFO_JSON='[
-            "[dev]:vanilla",
-            "[dev,prometheus]:prometheus_tools.py",
+            "vanilla:[dev]",
+            "prometheus_tools_test.py:[dev,prometheus]",
           ]'
           # Strip trailing comma before closing ]
           TEST_INFO_JSON=$(echo "$TEST_INFO_JSON" | sed ':a;N;$!ba;s/,\s*\]/\]/')
@@ -168,11 +168,11 @@ jobs:
           set -euo pipefail
           echo "now: $(date -u +"%Y-%m-%dT%H:%M:%S.%3N")"
           TEST_INFO="${{ matrix.test_info }}"
-          # "[extras]:file"
-          EXTRAS="${TEST_INFO%%:*}"  # before `:`
-          echo "extras=$EXTRAS" >> "$GITHUB_OUTPUT"
-          FILE="${TEST_INFO#*:}"     # after  `:`
+          # "file:[extras]"
+          FILE="${TEST_INFO%%:*}"  # before `:`
           echo "file=$FILE" >> "$GITHUB_OUTPUT"
+          EXTRAS="${TEST_INFO#*:}"     # after  `:`
+          echo "extras=$EXTRAS" >> "$GITHUB_OUTPUT"
       - name: Install dependencies
         run: |
           set -euo pipefail
