--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -114,11 +114,11 @@ jobs:
   # TESTS
   #############################################################################
 
-  prep-test-info:
+  prep-pytest:
     runs-on: ubuntu-latest
     outputs:
-      test_info_json: ${{ steps.set.outputs.test_info_json }}
-      ignore_args: ${{ steps.set.outputs.ignore_args }}
+      pytest_info_json: ${{ steps.set.outputs.pytest_info_json }}
+      pytest_ignore_args: ${{ steps.set.outputs.pytest_ignore_args }}
     steps:
       - name: Define outputs
         id: set
@@ -134,52 +134,52 @@ jobs:
           # - The 'vanilla' test is one that has no (or minimal) install extras
           # - Any test file listed will be ignored in the vanilla tests
           #
-          TEST_INFO_JSON='[
+          PYTEST_INFO_JSON='[
             "vanilla:[tests]",
             "prometheus_tools_test.py:[tests,prometheus]",
           ]'
           
           
           # format json
-          TEST_INFO_JSON=$(echo "$TEST_INFO_JSON" | sed ':a;N;$!ba;s/,\s*\]/\]/') # remove trailing comma 
-          TEST_INFO_JSON=$(echo "$TEST_INFO_JSON" | jq -c '.') # put on one line
-          echo $TEST_INFO_JSON
+          PYTEST_INFO_JSON=$(echo "$PYTEST_INFO_JSON" | sed ':a;N;$!ba;s/,\s*\]/\]/') # remove trailing comma 
+          PYTEST_INFO_JSON=$(echo "$PYTEST_INFO_JSON" | jq -c '.') # put on one line
+          echo $PYTEST_INFO_JSON
 
           # Assemble ignore args by extracting the filename part
-          IGNORE_ARGS=""
-          for file in $(jq -r '.[] | split(":")[0]' <<< "$TEST_INFO_JSON"); do
+          PYTEST_IGNORE_ARGS=""
+          for file in $(jq -r '.[] | split(":")[0]' <<< "$PYTEST_INFO_JSON"); do
             if [[ "$file" != "vanilla" ]]; then
-              IGNORE_ARGS+=" --ignore=tests/$file"
+              PYTEST_IGNORE_ARGS+=" --ignore=tests/$file"
             fi
           done
-          echo $IGNORE_ARGS
+          echo $PYTEST_IGNORE_ARGS
 
           # output
-          echo "test_info_json=$TEST_INFO_JSON" >> "$GITHUB_OUTPUT"
-          echo "ignore_args=$IGNORE_ARGS" >> "$GITHUB_OUTPUT"
+          echo "pytest_info_json=$PYTEST_INFO_JSON" >> "$GITHUB_OUTPUT"
+          echo "pytest_ignore_args=$PYTEST_IGNORE_ARGS" >> "$GITHUB_OUTPUT"
 
   tests:
-    needs: [ py-versions, prep-test-info ]
+    needs: [ py-versions, prep-pytest ]
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
         py3: ${{ fromJSON(needs.py-versions.outputs.matrix) }}
-        test_info: ${{ fromJSON(needs.prep-test-info.outputs.test_info_json) }}
+        pytest_info: ${{ fromJSON(needs.prep-pytest.outputs.pytest_info_json) }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.py3 }}
-      - name: Parse file and extras from test_info
+      - name: Parse file and extras from pytest_info
         id: parse
         run: |
           set -euo pipefail
           echo "now: $(date -u +"%Y-%m-%dT%H:%M:%S.%3N")"
-          TEST_INFO="${{ matrix.test_info }}"
+          PYTEST_INFO="${{ matrix.pytest_info }}"
           # "file:[extras]"
-          FILE="${TEST_INFO%%:*}"     # before `:`
-          EXTRAS="${TEST_INFO#*:}"    # after  `:`
+          FILE="${PYTEST_INFO%%:*}"     # before `:`
+          EXTRAS="${PYTEST_INFO#*:}"    # after  `:`
           echo "file=$FILE" >> "$GITHUB_OUTPUT"
           echo "extras=$EXTRAS" >> "$GITHUB_OUTPUT"
       - name: Install dependencies
@@ -193,7 +193,7 @@ jobs:
           set -euo pipefail
           echo "now: $(date -u +"%Y-%m-%dT%H:%M:%S.%3N")"
           if [[ "${{ steps.parse.outputs.file }}" == "vanilla" ]]; then
-            pytest -vvvv ${{ needs.prep-test-info.outputs.ignore_args }}
+            pytest -vvvv ${{ needs.prep-pytest.outputs.pytest_ignore_args }}
           else
             pytest -vvvv "tests/${{ steps.parse.outputs.file }}"
           fi
