Add `prometheus` Install Option (#119)
closes #118

---------

Co-authored-by: github-actions <github-actions@github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,8 +37,10 @@ file = "LICENSE"
 semver = [
   'semantic-version'
 ]
-dev = [
-  'prometheus-client',
+prometheus = [
+  'prometheus-client'
+]
+tests = [
   'pytest',
   'pytest-asyncio',
   'pytest-flake8',
