--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -96,7 +96,7 @@ jobs:
           token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
           ref: ${{ github.ref }}  # don't lock to 'sha' b/c action needs to push
       - if: needs.writable-branch-detect.outputs.OKAY == 'true'
-        uses: WIPACrepo/wipac-dev-py-setup-action@v5.0
+        uses: WIPACrepo/wipac-dev-py-setup-action@main
         with:
           python_min: 3.9
           pypi_name: wipac-dev-tools
