--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -1,6 +1,9 @@
-name: wipac ci/cd
+name: ci/cd
 
-on: [ push ]
+on:
+  push:
+    branches: [ '**' ]
+    tags-ignore: [ '**' ]
 
 jobs:
 
@@ -10,6 +13,8 @@ jobs:
       matrix: ${{ steps.versions.outputs.matrix }}
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.sha }}  # lock to triggered commit (github.ref is dynamic)
       - id: versions
         uses: WIPACrepo/wipac-dev-py-versions-action@v2.5
 
@@ -27,10 +32,12 @@ jobs:
         py3: ${{ fromJSON(needs.py-versions.outputs.matrix) }}
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.sha }}  # lock to triggered commit (github.ref is dynamic)
       - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.py3 }}
-      - uses: WIPACrepo/wipac-dev-flake8-action@v1.2
+      - uses: WIPACrepo/wipac-dev-flake8-action@v1.3
         with:
           max-complexity: 10  # ideal is ~10-15
 
@@ -43,6 +50,8 @@ jobs:
         py3: ${{ fromJSON(needs.py-versions.outputs.matrix) }}
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.sha }}  # lock to triggered commit (github.ref is dynamic)
       - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.py3 }}
@@ -64,8 +73,7 @@ jobs:
         #   & don't run non-branch triggers (like tags)
         #   & we don't want to trigger an update on PR's merge to main/master/default (which is a branch)
         run: |
-          set -euo pipefail
-          echo "now: $(date -u +"%Y-%m-%dT%H:%M:%S.%3N")"
+          set -euo pipefail; echo "now: $(date -u +"%Y-%m-%dT%H:%M:%S.%3N")"
           if [[ \
               ${{github.actor}} != 'dependabot[bot]' && \
               ${{github.ref_type}} == 'branch' && \
@@ -86,8 +94,9 @@ jobs:
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          ref: ${{ github.ref }}  # don't lock to 'sha' b/c action needs to push
       - if: needs.writable-branch-detect.outputs.OKAY == 'true'
-        uses: WIPACrepo/wipac-dev-py-setup-action@v4.5
+        uses: WIPACrepo/wipac-dev-py-setup-action@v5.0
         with:
           python_min: 3.9
           pypi_name: wipac-dev-tools
@@ -104,6 +113,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          ref: ${{ github.ref }}  # don't lock to 'sha' b/c action needs to push
       - if: needs.writable-branch-detect.outputs.OKAY == 'true'
         uses: WIPACrepo/wipac-dev-py-dependencies-action@v2.1
         with:
@@ -123,8 +133,7 @@ jobs:
       - name: Define outputs
         id: set
         run: |
-          set -euo pipefail
-          echo "now: $(date -u +"%Y-%m-%dT%H:%M:%S.%3N")"
+          set -euo pipefail; echo "now: $(date -u +"%Y-%m-%dT%H:%M:%S.%3N")"
 
 
           #
@@ -169,14 +178,15 @@ jobs:
         pytest_info: ${{ fromJSON(needs.prep-pytest.outputs.pytest_info_json) }}
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.sha }}  # lock to triggered commit (github.ref is dynamic)
       - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.py3 }}
       - name: Parse file and extras from pytest_info
         id: parse
         run: |
-          set -euo pipefail
-          echo "now: $(date -u +"%Y-%m-%dT%H:%M:%S.%3N")"
+          set -euo pipefail; echo "now: $(date -u +"%Y-%m-%dT%H:%M:%S.%3N")"
           PYTEST_INFO="${{ matrix.pytest_info }}"
           # "file:[extras]"
           FILE="${PYTEST_INFO%%:*}"     # before `:`
@@ -185,14 +195,12 @@ jobs:
           echo "extras=$EXTRAS" >> "$GITHUB_OUTPUT"
       - name: Install dependencies
         run: |
-          set -euo pipefail
-          echo "now: $(date -u +"%Y-%m-%dT%H:%M:%S.%3N")"
+          set -euo pipefail; echo "now: $(date -u +"%Y-%m-%dT%H:%M:%S.%3N")"
           pip install --upgrade pip wheel setuptools
           pip install ".${{ steps.parse.outputs.extras }}"
       - name: Run tests
         run: |
-          set -euo pipefail
-          echo "now: $(date -u +"%Y-%m-%dT%H:%M:%S.%3N")"
+          set -euo pipefail; echo "now: $(date -u +"%Y-%m-%dT%H:%M:%S.%3N")"
           if [[ "${{ steps.parse.outputs.file }}" == "vanilla" ]]; then
             pytest -vvvv ${{ needs.prep-pytest.outputs.pytest_ignore_args }}
           else
@@ -204,28 +212,63 @@ jobs:
   # RELEASE
   #############################################################################
 
-  release:
+  tag-and-release:
     # only run on main/master/default
     if: format('refs/heads/{0}', github.event.repository.default_branch) == github.ref
-    needs: [ flake8, mypy, py-setup, py-dependencies, tests ]
+    needs: [
+      py-versions,
+      flake8,
+      mypy,
+      py-setup,
+      py-dependencies,
+      tests,
+    ]
     runs-on: ubuntu-latest
-    concurrency: release  # prevent any possible race conditions
+    concurrency: tag-and-release  # prevent any possible race conditions
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0
-      # Python-Package Version Bump
-      - uses: python-semantic-release/python-semantic-release@v9.8.1
-        id: psr-psr
+          fetch-depth: 0  # required to see tags and commits
+          ref: ${{ github.sha }}  # lock to triggered commit ('github.ref' is dynamic)
+      - uses: actions/setup-python@v5  # needed for building project
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-      # PyPI Release
-      - uses: pypa/gh-action-pypi-publish@v1.12.4
-        if: steps.psr-psr.outputs.released == 'true'
+          python-version: "${{ fromJSON(needs.py-versions.outputs.matrix)[0] }}"
+
+      # Get Next Version & Tag
+      - uses: WIPACrepo/wipac-dev-next-version-action@v1.2
+        id: next-version
         with:
-          password: ${{ secrets.PYPI_TOKEN }}
+          force-patch-if-no-commit-token: true
+          ignore-paths: |
+            **/README.md
+            .github/**
+            .gitignore
+            dependencies-logs/**
+            tests/**
+      - if: steps.next-version.outputs.version != ''
+        name: Tag New Version
+        run: |
+          set -euo pipefail; echo "now: $(date -u +"%Y-%m-%dT%H:%M:%S.%3N")"
+          git tag v${{ steps.next-version.outputs.version }}  # note: prepend 'v'
+          git push origin --tags
+
+      # Build Python Package
+      - if: steps.next-version.outputs.version != ''
+        uses: WIPACrepo/wipac-dev-py-build-action@v1.0
+        # -> uses the most recent git tag for versioning (aka the one made above)
+        # -> creates 'dist/' files
+
       # GitHub Release
-      - uses: python-semantic-release/upload-to-gh-release@v9.8.1
-        if: steps.psr-psr.outputs.released == 'true'
+      - if: steps.next-version.outputs.version != ''
+        uses: softprops/action-gh-release@v2
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          files: dist/*
+          tag_name: v${{ steps.next-version.outputs.version }}  # must match git tag above
+          generate_release_notes: true
+
+      # PyPI Release
+      - if: steps.next-version.outputs.version != ''
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          user: __token__
+          password: ${{ secrets.PYPI_TOKEN }}
