--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -15,8 +15,13 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: ${{ github.sha }}  # lock to triggered commit (github.ref is dynamic)
+      - name: prep for py-versions
+        run: |
+          set -euo pipefail; echo "now: $(date -u +"%Y-%m-%dT%H:%M:%S.%3N")"
+          # 'WIPACrepo/wipac-dev-py-versions-action' uses 'wipac-dev-tools' so avoid namespace conflicts 
+          rm -rf wipac_dev_tools/
       - id: versions
-        uses: WIPACrepo/wipac-dev-py-versions-action@v2.6
+        uses: WIPACrepo/wipac-dev-py-versions-action@v2.5
 
 
   ############################################################################
