--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -15,10 +15,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: ${{ github.sha }}  # lock to triggered commit (github.ref is dynamic)
-      - name: "pip install ."
+      - name: "prep (TODO: remove after ci wrangling)"
         run: |
           set -euo pipefail; echo "now: $(date -u +"%Y-%m-%dT%H:%M:%S.%3N")"
-          pip install .
+          pip install python-dateutil
       - id: versions
         uses: WIPACrepo/wipac-dev-py-versions-action@v2.5
 
@@ -255,6 +255,11 @@ jobs:
           set -euo pipefail; echo "now: $(date -u +"%Y-%m-%dT%H:%M:%S.%3N")"
           git tag v${{ steps.next-version.outputs.version }}  # note: prepend 'v'
           git push origin --tags
+
+      - name: "prep (TODO: remove after ci wrangling)"
+        run: |
+          set -euo pipefail; echo "now: $(date -u +"%Y-%m-%dT%H:%M:%S.%3N")"
+          pip install python-dateutil
 
       # Build Python Package
       - if: steps.next-version.outputs.version != ''
