--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -258,7 +258,7 @@ jobs:
 
       # Build Python Package
       - if: steps.next-version.outputs.version != ''
-        uses: WIPACrepo/wipac-dev-py-build-action@v1.0
+        uses: WIPACrepo/wipac-dev-py-build-action@v1.1-alpha
         # -> uses the most recent git tag for versioning (aka the one made above)
         # -> creates 'dist/' files
 
