--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -15,13 +15,12 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: ${{ github.sha }}  # lock to triggered commit (github.ref is dynamic)
-      - name: prep for py-versions
+      - name: "prep (TODO: remove after ci wrangling)"
         run: |
           set -euo pipefail; echo "now: $(date -u +"%Y-%m-%dT%H:%M:%S.%3N")"
-          # 'WIPACrepo/wipac-dev-py-versions-action' uses 'wipac-dev-tools' so avoid namespace conflicts 
           rm -rf wipac_dev_tools/
       - id: versions
-        uses: WIPACrepo/wipac-dev-py-versions-action@v2.6
+        uses: WIPACrepo/wipac-dev-py-versions-action@v2.6-alpha
 
 
   ############################################################################
@@ -120,7 +119,7 @@ jobs:
           token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
           ref: ${{ github.ref }}  # don't lock to 'sha' b/c action needs to push
       - if: needs.writable-branch-detect.outputs.OKAY == 'true'
-        uses: WIPACrepo/wipac-dev-py-dependencies-action@v2.1
+        uses: WIPACrepo/wipac-dev-py-dependencies-action@v2.3
         with:
           use_directory: true
 
@@ -259,7 +258,7 @@ jobs:
 
       # Build Python Package
       - if: steps.next-version.outputs.version != ''
-        uses: WIPACrepo/wipac-dev-py-build-action@v1.0
+        uses: WIPACrepo/wipac-dev-py-build-action@v1.1-alpha
         # -> uses the most recent git tag for versioning (aka the one made above)
         # -> creates 'dist/' files
 
