--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ classifiers = [
 requires-python = ">=3.9, <3.14"
 dependencies = [
   'python-dateutil',
+  'python-dateutil',
   'requests',
   'typing_extensions'
 ]
