--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -15,12 +15,8 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: ${{ github.sha }}  # lock to triggered commit (github.ref is dynamic)
-      - name: "prep (TODO: remove after ci wrangling)"
-        run: |
-          set -euo pipefail; echo "now: $(date -u +"%Y-%m-%dT%H:%M:%S.%3N")"
-          rm -rf wipac_dev_tools/
       - id: versions
-        uses: WIPACrepo/wipac-dev-py-versions-action@v2.6-alpha
+        uses: WIPACrepo/wipac-dev-py-versions-action@v2.6
 
 
   ############################################################################
@@ -258,7 +254,7 @@ jobs:
 
       # Build Python Package
       - if: steps.next-version.outputs.version != ''
-        uses: WIPACrepo/wipac-dev-py-build-action@v1.1-alpha
+        uses: WIPACrepo/wipac-dev-py-build-action@v1.1
         # -> uses the most recent git tag for versioning (aka the one made above)
         # -> creates 'dist/' files
 
