--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -94,7 +94,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-          ref: ${{ github.ref }}  # don't lock to 'sha' b/c action needs to push
+          ref: ${{ github.ref }}  # dont lock to sha (action needs to push)
       - if: needs.writable-branch-detect.outputs.OKAY == 'true'
         uses: WIPACrepo/wipac-dev-py-setup-action@v5.0
         with:
@@ -113,7 +113,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-          ref: ${{ github.ref }}  # don't lock to 'sha' b/c action needs to push
+          ref: ${{ github.ref }}  # dont lock to sha (action needs to push)
       - if: needs.writable-branch-detect.outputs.OKAY == 'true'
         uses: WIPACrepo/wipac-dev-py-dependencies-action@v2.3
         with:
@@ -258,11 +258,20 @@ jobs:
         # -> uses the most recent git tag for versioning (aka the one made above)
         # -> creates 'dist/' files
 
+      # Grab artifacts created by 'WIPACrepo/wipac-dev-py-dependencies-action'
+      - if: steps.next-version.outputs.version != ''
+        uses: actions/download-artifact@v4
+        with:
+          name: py-dependencies-logs
+          path: pydep-release-assets/
+
       # GitHub Release
       - if: steps.next-version.outputs.version != ''
         uses: softprops/action-gh-release@v2
         with:
-          files: dist/*
+          files: |
+            dist/*
+            pydep-release-assets/**/*
           tag_name: v${{ steps.next-version.outputs.version }}  # must match git tag above
           generate_release_notes: true
 
