--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -62,41 +62,14 @@ jobs:
   # PACKAGING
   #############################################################################
 
-  writable-branch-detect:
-    runs-on: ubuntu-latest
-    outputs:
-      OKAY: ${{ steps.detect.outputs.OKAY }}
-    steps:
-      - name: is this a bot-writable branch?
-        id: detect
-        # dependabot can't access normal secrets
-        #   & don't run non-branch triggers (like tags)
-        #   & we don't want to trigger an update on PR's merge to main/master/default (which is a branch)
-        run: |
-          set -euo pipefail; echo "now: $(date -u +"%Y-%m-%dT%H:%M:%S.%3N")"
-          if [[ \
-              ${{github.actor}} != 'dependabot[bot]' && \
-              ${{github.ref_type}} == 'branch' && \
-              ${{format('refs/heads/{0}', github.event.repository.default_branch)}} != ${{github.ref}} \
-          ]]; then
-            echo "OKAY=true" >> "$GITHUB_OUTPUT"
-            echo "yes, this branch is compatible"
-          else
-            echo "OKAY=false" >> "$GITHUB_OUTPUT"
-            echo "no, this branch is incompatible"
-          fi
-
   py-setup:
-    needs: [ writable-branch-detect ]
     runs-on: ubuntu-latest
     steps:
-      - if: needs.writable-branch-detect.outputs.OKAY == 'true'
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
         with:
           token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-          ref: ${{ github.ref }}  # don't lock to 'sha' b/c action needs to push
-      - if: needs.writable-branch-detect.outputs.OKAY == 'true'
-        uses: WIPACrepo/wipac-dev-py-setup-action@v5.0
+          ref: ${{ github.ref }}  # dont lock to sha (action needs to push)
+      - uses: WIPACrepo/wipac-dev-py-setup-action@v5.0
         with:
           python_min: 3.9
           pypi_name: wipac-dev-tools
@@ -106,18 +79,13 @@ jobs:
           auto_mypy_option: True
 
   py-dependencies:
-    needs: [ writable-branch-detect ]
     runs-on: ubuntu-latest
     steps:
-      - if: needs.writable-branch-detect.outputs.OKAY == 'true'
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
         with:
           token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-          ref: ${{ github.ref }}  # don't lock to 'sha' b/c action needs to push
-      - if: needs.writable-branch-detect.outputs.OKAY == 'true'
-        uses: WIPACrepo/wipac-dev-py-dependencies-action@v2.3
-        with:
-          use_directory: true
+          ref: ${{ github.ref }}  # dont lock to sha (action needs to push)
+      - uses: WIPACrepo/wipac-dev-py-dependencies-action@v3.0
 
 
   ############################################################################
@@ -258,11 +226,20 @@ jobs:
         # -> uses the most recent git tag for versioning (aka the one made above)
         # -> creates 'dist/' files
 
+      # Grab artifacts created by 'WIPACrepo/wipac-dev-py-dependencies-action'
+      - if: steps.next-version.outputs.version != ''
+        uses: actions/download-artifact@v4
+        with:
+          name: py-dependencies-logs
+          path: pydep-release-assets/
+
       # GitHub Release
       - if: steps.next-version.outputs.version != ''
         uses: softprops/action-gh-release@v2
         with:
-          files: dist/*
+          files: |
+            dist/*
+            pydep-release-assets/**/*
           tag_name: v${{ steps.next-version.outputs.version }}  # must match git tag above
           generate_release_notes: true
 
