--- a/.github/workflows/add-to-project.yml
+++ b/.github/workflows/add-to-project.yml
@@ -13,6 +13,7 @@ on:
 
 jobs:
   add-to-project:
+    if: ${{ github.actor != 'dependabot[bot]' }} # dependabot cannot access token
     runs-on: ubuntu-latest
     steps:
       - uses: WIPACrepo/wipac-dev-project-action@v1.0
