use `WIPACrepo/wipac-dev-recent-run-check-action@v1.0`

--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -90,7 +90,7 @@ jobs:
           fetch-depth: 0  # setuptools-scm needs to access git tags
           ref: ${{ github.sha }}  # lock to triggered commit (github.ref is dynamic)
 
-      - uses: WIPACrepo/wipac-dev-recent-run-check-action@first
+      - uses: WIPACrepo/wipac-dev-recent-run-check-action@v1.0
         id: recent
         with:
           window-seconds: 900
